WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293053
[Site Isolation] Fix fast/loader/policy-delegate-action-hit-test-zoomed.html
https://bugs.webkit.org/show_bug.cgi?id=293053
Summary
[Site Isolation] Fix fast/loader/policy-delegate-action-hit-test-zoomed.html
Charlie Wolfe
Reported
2025-05-15 09:47:07 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-05-15 09:50:00 PDT
<
rdar://problem/151392044
>
Charlie Wolfe
Comment 2
2025-05-15 09:51:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45435
EWS
Comment 3
2025-05-17 15:45:39 PDT
Committed
295066@main
(e4963ad7465d): <
https://commits.webkit.org/295066@main
> Reviewed commits have been landed. Closing PR #45435 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug