[Site Isolation] Fix fast/loader/policy-delegate-action-hit-test-zoomed.html https://bugs.webkit.org/show_bug.cgi?id=293053 rdar://151392044

Reviewed by Alex Christensen.

`WKBundlePageGetPageZoomFactor` won’t always return the correct zoom level with site isolation. Replace
its use in WKTR.

* LayoutTests/platform/mac-site-isolation/TestExpectations:
* Tools/WebKitTestRunner/InjectedBundle/EventSendingController.cpp:
(WTR::EventSendingController::textZoomIn):
(WTR::EventSendingController::textZoomOut):
(WTR::EventSendingController::zoomPageIn):
(WTR::EventSendingController::zoomPageOut):
* Tools/WebKitTestRunner/TestController.cpp:
(WTR::TestController::didReceiveSynchronousMessageFromInjectedBundle):

Canonical link: https://commits.webkit.org/295066@main